# sigil

./: .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  SECURITY.md  clippy.toml  deny.toml  rustfmt.toml
apps/desktop/src-tauri/: Cargo.toml  tauri.bundle.conf.json  tauri.conf.json
apps/desktop/src-tauri/capabilities/: main.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/permissions/: desktop.toml
apps/desktop/src-tauri/src/: appearance.rs  commands.rs  ipc.rs  lib.rs  main.rs  recent.rs  run_streams.rs  startup.rs  state.rs  window_state.rs
crates/sigil/: Cargo.toml  build.rs
crates/sigil-cli/: Cargo.toml
crates/sigil-cli/src/: main.rs
crates/sigil-cli/src/tests/: main_tests.rs
crates/sigil-code-intel/: Cargo.toml
crates/sigil-code-intel/src/: cache.rs  context.rs  discovery.rs  edit.rs  error.rs  language.rs  lib.rs  lsp.rs  prepared_mutation.rs  repo_language.rs  service.rs  tools.rs  workspace.rs
crates/sigil-code-intel/src/service/: mod.rs  parsers.rs  preview.rs  requests.rs  server.rs  status.rs
crates/sigil-code-intel/src/tests/: cache_tests.rs  common.rs  context_tests.rs  discovery_tests.rs  edit_tests.rs  language_tests.rs  lib_tests.rs  lsp_framing_tests.rs  repo_language_tests.rs  service_tests.rs  (+3 more)
crates/sigil-desktop/: Cargo.toml
crates/sigil-desktop/src/: client.rs  dto.rs  events.rs  launcher.rs  lib.rs  manager.rs  protocol.rs  secret.rs
crates/sigil-http/: Cargo.toml
crates/sigil-http/examples/: export_openapi.rs
crates/sigil-http/src/: auth.rs  command_store.rs  config.rs  disclosure.rs  driver.rs  dto.rs  durable_io.rs  journal.rs  lib.rs  listener.rs  openapi.rs  production_driver.rs  protocol.rs  registry.rs  session_catalog_batch.rs  sse.rs  support.rs
crates/sigil-kernel/: Cargo.toml
crates/sigil-kernel/src/: agent.rs  agent_thread.rs  approval.rs  cancellation.rs  changeset.rs  checkpoint.rs  compaction_token_proof.rs  config.rs  context_engine.rs  conversation_fork.rs  conversation_queue.rs  conversation_run.rs  egress.rs  eval.rs  event.rs  execution_backend.rs  external.rs  hosted.rs  image_attachment.rs  lib.rs  memory.rs  mutation.rs  permission.rs  persistence.rs  plan.rs  plugin.rs  process_environment.rs  projection.rs  provider.rs  provider_error.rs  provider_request_material.rs  provider_timeout.rs  resume.rs  secret.rs  session.rs  skill.rs  sse.rs  task.rs  task_handoff.rs  task_memory.rs  (+7 more)
crates/sigil-mcp/: Cargo.toml
crates/sigil-mcp/src/: client.rs  elicitation.rs  error.rs  events.rs  framing.rs  lib.rs  lifecycle.rs  name.rs  output.rs  process.rs  process_group.rs  prompts.rs  resources.rs  roots.rs  search_binding.rs  streamable_http.rs  tools.rs
crates/sigil-process/: Cargo.toml
crates/sigil-process/src/: lib.rs
crates/sigil-provider-anthropic/: Cargo.toml
crates/sigil-provider-anthropic/src/: capabilities.rs  config.rs  errors.rs  hosted_search.rs  lib.rs  mapper.rs  models.rs  native_compaction.rs  provider.rs  request.rs  stream.rs
crates/sigil-provider-deepseek/: Cargo.toml
crates/sigil-provider-deepseek/src/: capabilities.rs  compaction_token_profile.rs  config.rs  endpoint.rs  errors.rs  lib.rs  mapper.rs  models.rs  prefix.rs  pricing.rs  provider.rs  reasoning.rs  reasoning_effort.rs  request.rs  response.rs  retry.rs  stream.rs  tools.rs
crates/sigil-provider-gemini/: Cargo.toml
crates/sigil-provider-gemini/src/: capabilities.rs  client.rs  config.rs  errors.rs  hosted_search.rs  lib.rs  mapper.rs  models.rs  provider.rs  request.rs  stream.rs
crates/sigil-runtime/: Cargo.toml
crates/sigil-runtime/src/: agent_completion.rs  agent_profile_registry.rs  agent_supervisor.rs  agent_tools.rs  application_catalog.rs  application_compaction.rs  application_queue.rs  application_recovery.rs  application_run.rs  context.rs  context_window.rs  conversation_coordinator.rs  conversation_display.rs  doctor.rs  egress_ordering.rs  exa_text_v1.rs  hosted_finalizer.rs  hosted_web_search.rs  image_attachment.rs  isolated_workspace.rs  lib.rs  machine_protocol.rs  mcp_declaration.rs  mcp_oauth.rs  mcp_oauth_flow.rs  mcp_oauth_http.rs  mcp_registry.rs  model_eval.rs  paths.rs  plugin_manifest_io.rs  plugins.rs  portable_compaction.rs  product_view.rs  provider_config.rs  provider_debug.rs  provider_factory.rs  provider_pressure.rs  provider_status.rs  reasoning_effort.rs  remote_mcp.rs  (+14 more)
crates/sigil-tools-builtin/: Cargo.toml
crates/sigil-tools-builtin/src/: changeset_tool.rs  constants.rs  file_tools.rs  lib.rs  path.rs  process_group.rs  process_owner.rs  registry.rs  shell.rs  shell_runtime.rs  support.rs  terminal_process.rs  terminal_tools.rs  webfetch.rs
crates/sigil-tui/: Cargo.toml  build.rs
crates/sigil-tui/src/: agent_display.rs  app.rs  appearance_diagnostics.rs  approval.rs  attention.rs  clipboard_image.rs  commands.rs  config_panel.rs  context_window.rs  input.rs  launcher.rs  lib.rs  main.rs  mouse.rs  provider_status.rs  runner.rs  sessions.rs  setup.rs  slash.rs  timeline.rs  ui.rs  view_model.rs  workspace_trust.rs
crates/sigil/src/: egress_disclosure.rs  main.rs
crates/sigil/tests/: doctor_process_tests.rs  machine_output_tests.rs  model_eval_process_tests.rs  serve_process_tests.rs  session_lifecycle_tui_process_tests.rs
crates/termquill-cli/: Cargo.toml
crates/termquill-cli/src/: main.rs
crates/termquill-provider-deepseek/: Cargo.toml
crates/termquill-provider-deepseek/src/: capabilities.rs  config.rs  endpoint.rs  fim.rs  lib.rs  mapper.rs  models.rs  prefix.rs  pricing.rs  provider.rs  reasoning.rs  request.rs  retry.rs  stream.rs  tools.rs
crates/termquill-runtime/: Cargo.toml
crates/termquill-runtime/src/: lib.rs
crates/termquill-tools-builtin/: Cargo.toml
crates/termquill-tools-builtin/src/: lib.rs
crates/termquill-tui/: Cargo.toml
crates/termquill-tui/src/: app.rs  approval.rs  commands.rs  config_panel.rs  context_window.rs  lib.rs  main.rs  mouse.rs  provider_status.rs  runner.rs  sessions.rs  setup.rs  slash.rs  timeline.rs  ui.rs  view_model.rs
(+1107 files in other folders)
