[workspace]
members = [
    "crates/sigil-kernel",
    "crates/sigil-provider-deepseek",
    "crates/sigil-tools-builtin",
    "crates/sigil-code-intel",
    "crates/sigil-mcp",
    "crates/sigil-runtime",
    "crates/sigil-cli",
    "crates/sigil-tui",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
clap = { version = "4.5.53", features = ["derive"] }
crossterm = "0.29.0"
futures = "0.3.31"
globset = "0.4.18"
ignore = "0.4.25"
ratatui = "0.29.0"
regex = "1.12.2"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
similar = "2.7.0"
syntect = "5"
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1.17"
toml = "0.9.8"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
tree-sitter = "0.26.9"
tree-sitter-rust = "0.24.2"
two-face = { version = "0.5", default-features = false, features = ["syntect-default-onig"] }
unicode-segmentation = "1.13.0"
unicode-width = "0.2.0"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
walkdir = "2.5.0"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"
