[workspace]
members = [
    "crates/sigil-kernel",
    "crates/sigil-provider-deepseek",
    "crates/sigil-provider-openai-compat",
    "crates/sigil-provider-openai-responses",
    "crates/sigil-provider-anthropic",
    "crates/sigil-provider-gemini",
    "crates/sigil-tools-builtin",
    "crates/sigil-code-intel",
    "crates/sigil-process",
    "crates/sigil-desktop",
    "crates/sigil-mcp",
    "crates/sigil-runtime",
    "crates/sigil-http",
    "crates/sigil",
    "crates/sigil-tui",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.0.1-alpha.5"

[workspace.dependencies]
aho-corasick = "1.1.4"
anyhow = "1.0.100"
arboard = { version = "3.6.1", default-features = false, features = ["image-data"] }
async-trait = "0.1.89"
async-compression = { version = "0.4.42", default-features = false, features = ["tokio", "gzip", "brotli", "zstd", "deflate"] }
base64 = "0.22.1"
clap = { version = "4.5.53", features = ["derive"] }
crossterm = "0.29.0"
futures = "0.3.31"
fs2 = "0.4.3"
globset = "0.4.18"
hmac = "0.12.1"
ignore = "0.4.25"
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg", "webp"] }
keyring = { version = "3.6.3", default-features = false, features = [
    "apple-native",
    "windows-native",
    "sync-secret-service",
    "vendored",
] }
encoding_rs = "0.8.35"
libc = "0.2.186"
nix = { version = "0.29.0", features = ["signal"] }
ratatui = "0.30.1"
regex = "1.12.2"
ring = "0.17.14"
portable-pty = "0.9.0"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "stream", "rustls-tls"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["float_roundtrip", "raw_value"] }
sha2 = "0.10.9"
similar = "2.7.0"
syntect = { version = "5", default-features = false, features = ["parsing", "default-syntaxes", "default-themes", "regex-onig"] }
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1.17"
tokenizers = { version = "0.23.1", default-features = false, features = ["onig"] }
toml = { version = "0.9.8", features = ["preserve_order"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
tree-sitter = "0.26.9"
tree-sitter-bash = "0.25.1"
tree-sitter-go = "0.25.0"
tree-sitter-javascript = "0.25.0"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.2"
tree-sitter-typescript = "0.23.2"
two-face = { version = "0.5", default-features = false, features = ["syntect-onig"] }
unicode-segmentation = "1.13.0"
unicode-width = "0.2.0"
uuid = { version = "1.18.1", features = ["serde", "v4", "v5"] }
url = "2.5.7"
unicode-normalization = "0.1.25"
walkdir = "2.5.0"
windows-sys = { version = "0.61.2", features = ["Win32_Storage_FileSystem"] }
zeroize = "1.8.2"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }
