[package]
name = "sigil-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "sigil"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
futures.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
sigil-kernel = { path = "../sigil-kernel" }
sigil-provider-deepseek = { path = "../sigil-provider-deepseek" }
sigil-runtime = { path = "../sigil-runtime" }

[lints]
workspace = true
