[package]
name = "sigil-code-intel"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
ignore.workspace = true
serde.workspace = true
serde_json.workspace = true
sigil-kernel = { path = "../sigil-kernel" }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tree-sitter.workspace = true
tree-sitter-rust.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
