[package]
name = "sigil-code-intel"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
ignore.workspace = true
serde.workspace = true
serde_json.workspace = true
sigil-kernel = { path = "../sigil-kernel" }
similar.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tree-sitter.workspace = true
tree-sitter-go.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-python.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-typescript.workspace = true

[dev-dependencies]
sigil-kernel = { path = "../sigil-kernel", features = ["test-support"] }
tempfile.workspace = true

[lints]
workspace = true
