[package]
name = "sigil-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
base64.workspace = true
reqwest.workspace = true
ring.workspace = true
serde.workspace = true
serde_json.workspace = true
sigil-process = { path = "../sigil-process" }
thiserror.workspace = true
tokio.workspace = true
url.workspace = true
uuid.workspace = true
zeroize.workspace = true

[lints]
workspace = true
