[package]
name = "sigil-http"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
sigil-kernel = { path = "../sigil-kernel" }
sigil-runtime = { path = "../sigil-runtime" }
thiserror.workspace = true
tokio.workspace = true

[lints]
workspace = true
