[package]
name = "sigil-kernel"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
test-support = []

[dependencies]
aho-corasick.workspace = true
anyhow.workspace = true
async-trait.workspace = true
futures.workspace = true
fs2.workspace = true
globset.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
uuid.workspace = true
url.workspace = true
zeroize.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
