[package]
name = "sigil-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
sigil-kernel = { path = "../sigil-kernel" }

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
