[package]
name = "sigil-process"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true

[target.'cfg(unix)'.dependencies]
nix.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = ["Win32_Foundation", "Win32_Security", "Win32_System_JobObjects", "Win32_System_Threading"] }

[lints]
workspace = true
