[package]
name = "sigil-provider-deepseek"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokenizers.workspace = true
tracing.workspace = true
sigil-kernel = { path = "../sigil-kernel" }

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true

[lints]
workspace = true
