[package]
name = "sigil-provider-gemini"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sigil-kernel = { path = "../sigil-kernel" }
thiserror.workspace = true

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
