[package]
name = "sigil-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
sha2.workspace = true
sigil-kernel = { path = "../sigil-kernel" }
sigil-code-intel = { path = "../sigil-code-intel" }
sigil-mcp = { path = "../sigil-mcp" }
sigil-provider-anthropic = { path = "../sigil-provider-anthropic" }
sigil-provider-deepseek = { path = "../sigil-provider-deepseek" }
sigil-provider-gemini = { path = "../sigil-provider-gemini" }
sigil-provider-openai-compat = { path = "../sigil-provider-openai-compat" }
sigil-tools-builtin = { path = "../sigil-tools-builtin" }
tokio.workspace = true
toml.workspace = true
uuid.workspace = true

[dev-dependencies]
futures.workspace = true
tempfile.workspace = true
tokio.workspace = true

[lints]
workspace = true
