[package]
name = "sigil-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
futures.workspace = true
ignore.workspace = true
image.workspace = true
libc.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
sha2.workspace = true
sigil-kernel = { path = "../sigil-kernel" }
sigil-code-intel = { path = "../sigil-code-intel" }
sigil-mcp = { path = "../sigil-mcp" }
sigil-provider-anthropic = { path = "../sigil-provider-anthropic" }
sigil-provider-deepseek = { path = "../sigil-provider-deepseek" }
sigil-provider-gemini = { path = "../sigil-provider-gemini" }
sigil-provider-openai-compat = { path = "../sigil-provider-openai-compat" }
sigil-provider-openai-responses = { path = "../sigil-provider-openai-responses" }
sigil-tools-builtin = { path = "../sigil-tools-builtin" }
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
thiserror.workspace = true
tempfile.workspace = true
uuid.workspace = true
url.workspace = true
unicode-normalization.workspace = true

[dev-dependencies]
fs2.workspace = true
tokio.workspace = true

[lints]
workspace = true
