[package]
name = "sigil-tools-builtin"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
globset.workspace = true
ignore.workspace = true
portable-pty.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
similar.workspace = true
tokio.workspace = true
tree-sitter.workspace = true
tree-sitter-bash.workspace = true
walkdir.workspace = true
sigil-kernel = { path = "../sigil-kernel" }

[dev-dependencies]
tempfile.workspace = true
serial_test = "3"

[lints]
workspace = true
