[package]
name = "sigil-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
clap.workspace = true
crossterm.workspace = true
ratatui.workspace = true
reqwest.workspace = true
serde_json.workspace = true
sha2.workspace = true
syntect.workspace = true
toml.workspace = true
tokio.workspace = true
sigil-kernel = { path = "../sigil-kernel" }
sigil-provider-anthropic = { path = "../sigil-provider-anthropic" }
sigil-provider-deepseek = { path = "../sigil-provider-deepseek" }
sigil-provider-gemini = { path = "../sigil-provider-gemini" }
sigil-provider-openai-compat = { path = "../sigil-provider-openai-compat" }
sigil-runtime = { path = "../sigil-runtime" }
two-face.workspace = true
unicode-segmentation.workspace = true
unicode-width.workspace = true
uuid.workspace = true

[dev-dependencies]
futures.workspace = true
tempfile.workspace = true

[lints]
workspace = true
