[package]
name = "sigil-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
arboard.workspace = true
async-trait.workspace = true
clap.workspace = true
crossterm.workspace = true
image.workspace = true
ratatui.workspace = true
serde_json.workspace = true
sha2.workspace = true
syntect.workspace = true
toml.workspace = true
tracing.workspace = true
tokio.workspace = true
sigil-kernel = { path = "../sigil-kernel" }
sigil-runtime = { path = "../sigil-runtime" }
two-face.workspace = true
unicode-segmentation.workspace = true
unicode-width.workspace = true
uuid.workspace = true

[dev-dependencies]
futures.workspace = true
tempfile.workspace = true

[lints]
workspace = true
