[package]
name = "sigil"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
futures.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
sigil-kernel = { path = "../sigil-kernel" }
sigil-http = { path = "../sigil-http" }
sigil-runtime = { path = "../sigil-runtime" }
sigil-tui = { path = "../sigil-tui" }

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
