[package]
name = "termquill-provider-deepseek"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
termquill-kernel = { path = "../termquill-kernel" }

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true

