[package]
name = "termquill-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
sha2.workspace = true
termquill-kernel = { path = "../termquill-kernel" }
termquill-code-intel = { path = "../termquill-code-intel" }
termquill-mcp = { path = "../termquill-mcp" }
termquill-provider-deepseek = { path = "../termquill-provider-deepseek" }
termquill-tools-builtin = { path = "../termquill-tools-builtin" }

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
