[package]
name = "termquill-tools-builtin"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
globset.workspace = true
ignore.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
similar.workspace = true
tokio.workspace = true
walkdir.workspace = true
termquill-kernel = { path = "../termquill-kernel" }

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
